--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
     implementation 'com.google.firebase:firebase-analytics'
 
+    //auth
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
     // firestore
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
 }
