--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoWithSpot"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAETFlMt2p7twCD8qTt59uYGtNKAUsO77w" />
+
         <activity
             android:name=".view.all.AllActivity"
             android:exported="false">
